# wtf

./: .gitignore  PROMPT.txt  README.md  bash.py  ollama_client.py  pyproject.toml  wtf-settings.json  wtf_data.py
bash/: install.sh  wtf-run.sh
pwsh/: wtf-run.ps1
wtf_cli/: arguments.py  data.py  main.py  ollama_client.py  wtf.py  wtf_data.py
