[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wtf-cli"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "ollama>=0.6.2",
    "python-dotenv>=1.0"
]

[tool.setuptools.packages.find]
include = ["wtf_cli"]

[project.scripts]
wtf-bin = "wtf_cli.wtf:main"